# swagger.json
@@ -1,8 +1,8 @@
 {
   "swagger": "2.0",
   "info": {
-    "description": "Automateum",
-    "title": "Automation Api Structure",
+    "description": "Node | Express | Mongo | Multi Tenant | Social Login",
+    "title": "Starter Package",
     "version": "1.0.0"
   },
   "host": "localhost:3001",
@@ -66,6 +66,11 @@
         ],
         "description": "",
         "parameters": [
+          {
+            "name": "x-tenant-id",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -204,6 +209,129 @@
             "description": "Unauthorized"
           }
         }
+      }
+    },
+    "/health": {
+      "get": {
+        "tags": [
+          "Dev"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/passport/google": {
+      "get": {
+        "tags": [
+          "Passport"
+        ],
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/passport/google/callback": {
+      "get": {
+        "tags": [
+          "Passport"
+        ],
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/passport/github": {
+      "get": {
+        "tags": [
+          "Passport"
+        ],
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/passport/github/callback": {
+      "get": {
+        "tags": [
+          "Passport"
+        ],
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/passport/linkedin": {
+      "get": {
+        "tags": [
+          "Passport"
+        ],
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/passport/linkedin/callback": {
+      "get": {
+        "tags": [
+          "Passport"
+        ],
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/": {
+      "post": {
+        "tags": [
+          "Role"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "_id": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
       }
     }
   }
